force-app/main/default/objects/Student_Data__c/Student_Data__c.object-meta.xml
<CustomObject>
    <label>Student_Data</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>