force-app/main/default/objects/Student_Data__c/fields/Mail_Of_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Mail_Of_Teacher__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Mail Of Teacher</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>