force-app/main/default/objects/Student_Data__c/fields/Marks_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Marks_Percentage__c</fullName>
    <label>Marks Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>