force-app/main/default/objects/Student_Data__c/fields/SMS_Of_Parent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Of_Parent__c</fullName>
    <label>SMS Of Parent</label>
    <type>TextArea</type>
</CustomField>