force-app/main/default/objects/Student_Data__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <label>Teacher Name</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>